--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/bg"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -54,10 +55,12 @@
         <ImageButton
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:id="@+id/buttonMasjidTerdekat"
             android:layout_gravity="top|center_vertical"/>
         <ImageButton
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:id="@+id/buttonJadwalSholat"
             android:layout_gravity="top|center_vertical" />
 
     </LinearLayout>
@@ -69,15 +72,19 @@
         android:layout_alignParentStart="true">
         <ImageButton
             android:layout_width="100dp"
+            android:id="@+id/buttonSetting"
             android:layout_height="100dp"
             android:layout_marginLeft="18dp"/>
         <ImageButton
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:id="@+id/buttonTentangKami"
+            android:onClick="launchClick"
             android:layout_gravity="top|center_vertical"/>
         <ImageButton
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:id="@+id/buttonHelp"
             android:layout_gravity="top|center_vertical" />
     </LinearLayout>
 
