--- a/app/src/main/res/layout/activity_notif.xml
+++ b/app/src/main/res/layout/activity_notif.xml
@@ -1,11 +1,44 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ece6ec"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView android:id="@+id/sample_output"
-        style="@style/Widget.SampleOutput"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/intro_message" />
+        android:layout_height="match_parent"
+        android:paddingTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textView4">
 
-</ScrollView>
+            <ImageView android:id="@+id/imageView"
+                android:layout_height="60dp"
+                android:layout_width="30dp"
+                android:src="@drawable/ic_alarm_black_24dp"
+                android:layout_column="0" />
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reminder Sholat"
+                android:id="@+id/start_action"
+                android:layout_column="8" />
+
+
+        <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel Reminder"
+                android:id="@+id/cancel_action"
+                android:layout_column="8" />
+
+    </TableLayout>
+
+</RelativeLayout>
