--- a/app/src/main/res/menu/bike_networks_list.xml
+++ b/app/src/main/res/menu/bike_networks_list.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2015 Bruno Parmentier. This file is part of OpenBikeSharing.
+  ~ Copyright (c) 2014-2015 Bruno Parmentier. This file is part of OpenBikeSharing.
   ~
   ~ OpenBikeSharing is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -16,11 +15,15 @@
   ~ along with OpenBikeSharing.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="180dp"
-    android:minHeight="40dp"
-    android:updatePeriodMillis="1800000"
-    android:initialLayout="@layout/app_widget"
-    android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen"
-    android:initialKeyguardLayout="@layout/app_widget" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="be.brunoparmentier.openbikesharing.hiMasjid.activities.BikeNetworksListActivity">
+
+    <item
+        android:id="@+id/action_search"
+        android:actionViewClass="android.widget.SearchView"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom|collapseActionView"
+        android:title="@string/action_search" />
+</menu>
